fix link overflow of hidden products

--- a/blocks/product-carousel/product-carousel.css
+++ b/blocks/product-carousel/product-carousel.css
@@ -139,7 +139,8 @@ main .section.product-carousel-container {
     max-width: 400px;
 }
 
-.product-carousel .slider > div > div:last-child::after {
+.product-carousel .slider > div:nth-child(1) > div:last-child::after,
+.product-carousel .slider > div:nth-child(3) > div:last-child::after {
     content: "";
     position: absolute;
     bottom: 0;
